Added variables and background style

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="style.scss">
 </head>
 <body>
+
+<div class="pomodoro__background">
+
+    <div class="pomodoro__container">
+        <div class="pomodoro__timer">
+
+        </div>
+        <div class="pomodoro__tasks">
+
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
